# custom-autocorrect

./: .gitignore  CONVENTIONS.md  CustomAutocorrect.spec  LICENSE  README.md  TESTING.md  build.py  design.md  ideation.md  implementation_plan.md  phase11_plan.md  phase1_plan.md  phase2_plan.md  phase3_plan.md  phase4_plan.md  phase5_plan.md  phase6_plan.md  phase7_plan.md  pyproject.toml  requirements.md  requirements.txt  run.py  technology_decisions.md
resources/: README.md  create_icon.py  words.txt
scripts/: run_tests.ps1
src/custom_autocorrect/: __init__.py  __main__.py  correction.py  correction_log.py  hotkey.py  keystroke_engine.py  logging.py  main.py  password_detect.py  paths.py  rules.py  single_instance.py  startup.py  suggestions.py  tray.py  word_buffer.py
tests/: __init__.py  conftest.py  test_correction.py  test_correction_log.py  test_hotkey.py  test_keystroke_engine.py  test_password_detect.py  test_placeholder.py  test_properties.py  test_rules.py  test_single_instance.py  test_startup.py  test_suggestions.py  test_tray.py  test_word_buffer.py
